# sample_celery_multi_schedule_project

./: Readme.md  beat.py  pyproject.toml  tasks.py  worker.py
celery_components/: celery_conf.py  celery_factory.py  custom_crontab.py
